<resources>
    <string name="app_name">Calculator</string>
    <string name="plusText">+</string>
    <string name="minusText">-</string>
    <string name="multiplicationText">×</string>
    <string name="divisionString">÷</string>
    <string name="sevenString">7</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="tab_text_1">Unlocked Apps</string>
    <string name="tab_text_2">locked Apps</string>
    <string name="telegram">telegram</string>
    <string name="create_your_password">Create Your Password</string>
    <string name="re_write_your_password">Re-Write Your Password</string>
    <string name="submit">Submit</string>
    <string name="unlock_the_pattern">Unlock The Pattern</string>
    <string name="draw_your_pattern">Draw Your Pattern</string>
    <string name="redraw_your_pattern">Re Draw Your Pattern</string>
</resources>