<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:orientation="vertical"
    android:padding="@dimen/paddingLarge"
    tools:context=".MainActivity">

    <View
        android:layout_width="match_parent"
        android:layout_height="180dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:text="12 + 5 + 2019 ="
        android:textColor="@color/white"
        android:layout_marginEnd="16dp"
        android:textSize="@dimen/textNormal" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:text="2034"
        android:textColor="@color/brand"
        android:layout_marginEnd="16dp"
        android:textSize="@dimen/textGain" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginHorizontal="16dp"
        android:layout_marginVertical="8dp">

        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="@dimen/button_width"
            android:layout_height="@dimen/button_height"
            style="@style/CalculatorButton.Operation"
            android:text="@string/plusText"
            android:layout_weight="1"
            android:layout_margin="@dimen/space_between_buttons"/>

        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="@dimen/button_width"
            android:layout_height="@dimen/button_height"
            style="@style/CalculatorButton.Operation"
            android:text="@string/minusText"
            android:layout_weight="1"
            android:layout_margin="@dimen/space_between_buttons"/>

        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="@dimen/button_width"
            android:layout_height="@dimen/button_height"
            style="@style/CalculatorButton.Operation"
            android:text="@string/multiplicationText"
            android:layout_weight="1"
            android:layout_margin="@dimen/space_between_buttons"/>


        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="@dimen/button_width"
            android:layout_height="@dimen/button_height"
            style="@style/CalculatorButton.Operation"
            android:text="@string/divisionString"
            android:layout_weight="1"
            android:layout_margin="@dimen/space_between_buttons"/>


    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginHorizontal="16dp"
        android:layout_marginVertical="8dp">

        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="@dimen/button_width"
            android:layout_height="@dimen/button_height"
            style="@style/CalculatorButton.Number"
            android:text="@string/sevenString"
            android:layout_weight="1"
            android:layout_margin="@dimen/space_between_buttons"/>

        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="@dimen/button_width"
            android:layout_height="@dimen/button_height"
            style="@style/CalculatorButton.Number"
            android:text="8"
            android:layout_weight="1"
            android:layout_margin="@dimen/space_between_buttons"/>

        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="@dimen/button_width"
            android:layout_height="@dimen/button_height"
            style="@style/CalculatorButton.Number"
            android:text="9"
            android:layout_weight="1"
            android:layout_margin="@dimen/space_between_buttons"/>


        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="@dimen/button_width"
            android:layout_height="@dimen/button_height"
            style="@style/CalculatorButton.Operation"
            android:text="C"
            android:layout_weight="1"
            android:layout_margin="@dimen/space_between_buttons"/>


    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginHorizontal="16dp"
        android:layout_marginVertical="8dp">

        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="@dimen/button_width"
            android:layout_height="@dimen/button_height"
            style="@style/CalculatorButton.Number"
            android:text="4"
            android:layout_weight="1"
            android:layout_margin="@dimen/space_between_buttons"/>

        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="@dimen/button_width"
            android:layout_height="@dimen/button_height"
            style="@style/CalculatorButton.Number"
            android:text="5"
            android:layout_weight="1"
            android:layout_margin="@dimen/space_between_buttons"/>

        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="@dimen/button_width"
            android:layout_height="@dimen/button_height"
            style="@style/CalculatorButton.Number"
            android:text="6"
            android:layout_weight="1"
            android:layout_margin="@dimen/space_between_buttons"/>


        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="@dimen/button_width"
            android:layout_height="@dimen/button_height"
            style="@style/CalculatorButton.Operation"
            android:text="+-"
            android:layout_weight="1"
            android:layout_margin="@dimen/space_between_buttons"/>


    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginHorizontal="16dp"
        android:layout_marginVertical="8dp">

        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="@dimen/button_width"
            android:layout_height="@dimen/button_height"
            style="@style/CalculatorButton.Number"
            android:text="1"
            android:layout_weight="1"
            android:layout_margin="@dimen/space_between_buttons"/>

        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="@dimen/button_width"
            android:layout_height="@dimen/button_height"
            style="@style/CalculatorButton.Number"
            android:text="2"
            android:layout_weight="1"
            android:layout_margin="@dimen/space_between_buttons"/>

        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="@dimen/button_width"
            android:layout_height="@dimen/button_height"
            style="@style/CalculatorButton.Number"
            android:text="3"
            android:layout_weight="1"
            android:layout_margin="@dimen/space_between_buttons"/>


        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="@dimen/button_width"
            android:layout_height="@dimen/button_height"
            style="@style/CalculatorButton.Operation"
            android:text="%"
            android:layout_weight="1"
            android:layout_margin="@dimen/space_between_buttons"/>


    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginHorizontal="16dp"
        android:layout_marginVertical="8dp">

        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="@dimen/button_width"
            android:layout_height="@dimen/button_height"
            style="@style/CalculatorButton.Number"
            android:text="0"
            android:layout_weight="1"
            android:layout_margin="@dimen/space_between_buttons"/>

        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="@dimen/button_width"
            android:layout_height="@dimen/button_height"
            style="@style/CalculatorButton.Number"
            android:text=","
            android:layout_weight="1"
            android:layout_margin="@dimen/space_between_buttons"/>

        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="164dp"
            android:layout_height="64dp"
            style="@style/CalculatorButton.Result"
            android:text="="
            android:layout_weight="1"
            android:layout_margin="@dimen/space_between_buttons"/>

    </LinearLayout>


</LinearLayout>